<resources>
    <string name="app_name">Programming Languages</string>

    <string name="name">Name</string>
    <string name="detail">Detail</string>
    <string name="source">Source</string>
    <string name="about">About</string>
    <string name="favorite">Favorite</string>

    <string name="skill">Skills Needed:</string>
    <string name="link">Learn</string>

    <string name="my_name">Ahmad Abu Hasan</string>
    <string name="my_email">ahmadabuhasan@mhs.stmik-yadika.ac.id</string>
    <string name="dicoding">dicoding.com</string>
    <string name="account">My Dicoding</string>
</resources>